QmidiCtl - A MIDI Remote Controller via UDP/IP Multicast
--------------------------------------------------------

ChangeLog

0.1.0  2010-09-03  Second public release.

- Standard desktop icon fixing (Fremantle/Hildon).

- MIDI note and controller names (GM) added.

- Logarithmic scale configure option added.

- Message box title confidence fix (whatever it be:)

- MIDI controller assignment, any other than mostly MMC, is now
  user configurable for all widgets, buttons, sliders and knobs,
  trough the novel "Configure..." menu item. (EXPERIMENTAL)

- Dropped the "About Qt..." menu item.

- Use standard dialog buttons as provided by QDialogButtonBox.

- Attempt to comply with maemo.org extras-testing promotion.


0.0.1  2010-03-07  First public release.